# geny-adapted-project-toolkit

./: .editorconfig  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md
poc/executor_agent/: README.md  credentials.py  decision_two_layer_policy.md  error_codes_reproduced.md  policy_hook.py  pyproject.toml  reproduce_errors.py  run.py  run_hooks.py  run_mcp.py
poc/executor_agent/fixtures/: fake_auth.sh  fake_perm.sh  fake_slow.sh
poc/executor_agent/manifests/: gapt_default.v0.json
poc/executor_agent/scripts/: run_all.sh
poc/mcp_bridge/: README.md  pyproject.toml  server.py
poc/sysbox_isolation/tests/: README.md  conftest.py  pyproject.toml  test_isolation.py
runtime/: Dockerfile  README.md  pyproject.toml
runtime/scripts/: entrypoint.sh
runtime/src/gapt_runtime/: auth.py  cli.py  daemon.py  handlers.py  handlers_pty.py  handlers_tools.py  pty_manager.py  settings.py  workspace.py
runtime/src/gapt_runtime/mcp_bridge/: __init__.py  client.py  server.py
runtime/src/gapt_runtime/tools/: __init__.py  edit.py  git_tool.py  glob.py  grep.py  pr_tool.py  protocol.py  read.py  registry.py
runtime/tests/: test_cli.py  test_daemon_handlers.py  test_daemon_pty.py  test_daemon_smoke.py  test_git_tool.py  test_mcp_bridge_client.py  test_pr_tool.py  test_settings.py  test_tools_http.py  test_tools_unit.py
server/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 20260523_0001_init_init.py  20260525_0002_user_agent_prefs.py  20260525_0003_agent_prefs_permission_mode.py  20260525_0004_environments_last_run.py  20260525_0005_deploy_runs_table.py  20260525_0006_projects_webhook_secret.py  20260526_0001_initial_schema_single_admin.py  20260527_9d411d5f596a_provider_configs.py  20260528_a4c3b2d9e7f8_workspace_branch_unique.py  20260528_b8e1c4af2210_session_events.py  20260528_c7d2e9a3f410_admin_default_manifest.py  20260528_fd2e71745ed6_provider_migrations.py  20260601_5a9af81931ba_agent_sessions_cache_tokens.py  20260604_b1e2c3d4f7a9_scaffold_preset_id.py  20260608_e3a7d2f15c91_agent_sessions_cost_budget.py  20260609_a8c4b2e9d731_workspace_name_and_repos.py  20260609_d5a3c91f7eb8_environments_repository_id.py  20260609_f7b8e3d2a165_project_repositories.py  20260614_c1d2e3f4a5b6_fk_indexes.py  20260623_e1f2a3b4c5d6_snapshots.py
server/scripts/: export_openapi.py  smoke_executor_220.py
server/src/gapt_server/: app.py  container.py  logging.py  settings.py
server/src/gapt_server/agent/: __init__.py  credentials.py  environment_service.py  executor_patches.py  freshness.py  introspect_mcp.py  pricing.py  sandbox_runner.py  session_manager.py  session_registry.py  streaming.py  transcript.py
server/src/gapt_server/db/: __init__.py  base.py  enums.py  models.py  session.py  ulid.py
server/src/gapt_server/domains/: __init__.py  git_remote.py
server/src/gapt_server/manifests/: gapt_anthropic_sdk.json  gapt_default.json  gapt_google.json  gapt_openai.json  gapt_planning.json  gapt_review.json
server/src/gapt_server/middleware/: __init__.py  trace_id.py
server/src/gapt_server/observability/: __init__.py  instruments.py  metrics.py  render.py
server/src/gapt_server/policy/: __init__.py  config_loader.py  engine.py  invariants.py
server/src/gapt_server/routers/: agent_prefs.py  audit.py  auth.py  ci.py  cost.py  deploy.py  environments.py  (+23 more)
server/tests/: conftest.py  test_container.py  test_health.py  test_settings.py  test_trace_id.py
server/tests/_helpers/: db_guard.py  fake_sandbox.py  uvicorn_server.py
server/tests/agent/: test_credentials.py  test_environment_service.py  test_event_taxonomy.py  test_freshness.py  test_hooks.py  test_introspect_gate.py  test_introspect_mcp.py  test_introspect_merge.py  test_invoke_attachments.py  test_invoke_validation.py  test_manifest_validation.py  test_multi_turn_memory.py  test_pricing_fallback.py  test_sandbox_runner.py  test_session_manager.py  test_session_overrides_merge.py  test_session_recording.py  test_streaming.py  test_thinking_override.py  test_transcript.py
server/tests/audit/: test_masking.py  test_routes.py  test_sink.py
server/tests/auth/: test_admin_login.py  test_github_oauth.py  test_magic_link_flow.py
server/tests/caddy/: test_admin_and_subdomain.py  test_boot_resync.py  test_routes.py  test_share.py
server/tests/ci/: test_routes.py
server/tests/cost/: test_routes.py
server/tests/db/: test_migration.py  test_models_smoke.py
server/tests/deploy/: test_local.py  test_orchestrator.py  test_ports_preflight.py  test_routes.py  test_ssh.py  test_stack_manager_logs.py  test_webhook.py  test_webhook_signature.py
server/tests/domains/: test_git_remote.py
server/tests/e2e/: test_e1_smoke.py
server/tests/git/: test_askpass.py  test_discard_safety.py  test_fetch_helper.py  test_github_provider.py  test_provider_protocol.py
server/tests/introspection/: test_detector.py  test_patcher.py
server/tests/llm_backends/: test_auth_jobs.py  test_health.py
server/tests/notifications/: test_routes.py  test_service.py
server/tests/observability/: test_metrics.py
server/tests/performance/: test_orphan_classification.py  test_session_metrics_mashup.py
server/tests/policy/: test_config_loader.py  test_engine.py  test_invariants.py  test_layered_engine.py  test_routes.py
server/tests/projects/: test_repositories.py  test_routes.py
server/tests/sandbox/: test_capabilities.py  test_invariants.py  test_mock_backend.py  test_sysbox_backend.py
server/tests/secrets/: test_routes.py  test_vault.py
server/tests/services/: test_manifest.py  test_pgid_kill.py  test_port_reconcile.py  test_reconcile_recovery.py  test_registry_reconcile.py
server/tests/sessions/: test_oneshot.py  test_routes.py
server/tests/storage/: test_volume.py
server/tests/workspaces/: test_bare_migration.py  test_diff.py  test_files.py  test_multi_repo.py  test_routes.py  test_workspace_sandbox_bare_mount.py  test_workspace_sandbox_gpu.py  test_workspace_sandbox_runtime.py  test_worktree.py
(+409 files in other folders)
