[project]
name = "gapt-runtime"
version = "0.0.1"
description = "geny-adapted-project-toolkit — toolkit-agent daemon (runs inside sandbox containers)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "CocoRoF", email = "gkfua00@gmail.com" }]

dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.9,<3",
    "pyjwt>=2.9",
    "structlog>=24.4",
    "python-ulid>=2.7",

    # MCP stdio bridge — speaks Model Context Protocol with the spawned
    # `claude` CLI; HTTP-over-unix-socket to the daemon for dispatch.
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
toolkit-agent = "gapt_runtime.cli:main"
gapt-mcp-bridge = "gapt_runtime.mcp_bridge.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gapt_runtime"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL", "TCH", "ASYNC"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
# Tool implementations do filesystem I/O on small workspace trees;
# sync pathlib is fine and matches the rest of the daemon.
# PLR0912/15 are too noisy for tools that legitimately have one
# big traversal branch.
"src/gapt_runtime/tools/**" = ["ASYNC240", "PLR0912", "PLR0915"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["gapt_runtime"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config",
           "--cov=gapt_runtime", "--cov-report=term-missing:skip-covered"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/gapt_runtime"]
