[project]
name = "gapt-executor-agent-poc"
version = "0.0.1"
description = "M0-P3 PoC — Pipeline.from_manifest_async + claude_code_cli + MCP wrap"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "CocoRoF", email = "gkfua00@gmail.com" }]

dependencies = [
    "geny-executor>=2.1.0,<3",
    "anthropic>=0.52.0",
    "mcp>=1.0.0",
    "pydantic>=2.9",
    "python-ulid>=2.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL", "TCH", "ASYNC"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915"]

[tool.ruff.format]
quote-style = "double"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = false   # PoC — turn on once the surface stabilises (M1-E2)

[[tool.mypy.overrides]]
module = ["geny_executor.*", "mcp.*"]
ignore_missing_imports = true
