[project]
name = "gapt-mcp-bridge-poc"
version = "0.0.1"
description = "M0-P3 PoC — MCP stdio bridge that surfaces PoC tools to a spawned claude CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "CocoRoF", email = "gkfua00@gmail.com" }]

dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
gapt-mcp-bridge = "server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
